# SPDX-FileCopyrightText: 2013 The glucometerutils Authors
#
# SPDX-License-Identifier: MIT

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[build-system]
requires = [
  'setuptools >= 42',
  'wheel',
  'setuptools_scm[toml]>=3.4',
]

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# These settings ensure that black and isort don't disagree on the imports.
line_length = 88
multi_line_output = 3
include_trailing_comma = true

known_first_party = ['glucometerutils']
known_third_party = ['construct', 'hidapi', 'pyscsi', 'serial', 'usbmon']

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--color=yes --ignore=setup.py -ra"
timeout = 120
norecursedirs = [
  '.env',
  '.git',
  'dist',
  'build',
  'venv',
]
