# SPDX-FileCopyrightText: 2013 The glucometerutils Authors
#
# SPDX-License-Identifier: MIT

[metadata]
name = glucometerutils
description = Glucometer access utilities
long_description = file:README.md
long_description_content_type = text/markdown
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = MIT
license_files =
   AUTHORS
   LICENSES/*
url = https://flameeyes.com/p/glucometerutils
keywords =
    glucometer
    diabetes
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: End Users/Desktop
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
python_requires = ~= 3.7
install_requires =
    attrs
packages = find:

[options.data_files]
lib/udev/rules =
    udev/69-glucometerutils.rules

[tool:pytest]
addopts =
        --color=yes
        --ignore=setup.py
        -r a
norecursedirs =
              .git
              dist
              build
              venv
              .env
timeout = 120

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
