# SPDX-FileCopyrightText: 2013 The glucometerutils Authors
#
# SPDX-License-Identifier: MIT

[metadata]
name = glucometerutils
description = Glucometer access utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://flameeyes.com/p/glucometerutils
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = MIT
license_files =
    AUTHORS
    LICENSES/*
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Medical Science Apps.
keywords =
    glucometer
    diabetes

[options]
packages = find:
install_requires =
    attrs
python_requires = ~= 3.9

[options.data_files]
lib/udev/rules =
    udev/69-glucometerutils.rules

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    glucometer = glucometerutils.glucometer:main

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
